v3.0.0: adjusted locale generation code to avoid deprecation warnings